# cricform-vision-lab

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: demo_walkthrough.md  phase0_feasibility.md  project_release_checklist.md
src/cricform/: __init__.py  config.py
src/cricform/app/: streamlit_app.py
src/cricform/baseline/: build_baseline.py  compare_shot.py
src/cricform/features/: joint_angles.py  motion_features.py  quality_features.py
src/cricform/ingest/: create_sample_video.py  download_dataset.py  sample_dataset.py
src/cricform/models/: shot_classifier.py
src/cricform/phases/: detect_phases.py
src/cricform/pipeline/: real_demo.py
src/cricform/pose/: batch_pose_audit.py  landmark_schema.py  mediapipe_pose.py
src/cricform/reports/: render_report.py
src/cricform/video/: frame_extract.py  metadata.py  overlay.py  slow_video.py
tests/: test_angles.py  test_baseline_builder.py  test_batch_pose_audit.py  test_ci_workflow.py  test_compare_shot.py  test_dataset_sampling.py  test_frame_extract.py  test_import.py  test_landmark_schema.py  test_mediapipe_pose_helpers.py  test_motion_features.py  test_overlay.py  test_phase_detection.py  test_quality_features.py  test_real_demo_pipeline.py  test_render_report.py  test_sample_video.py  test_shot_classifier.py  test_slow_video.py  test_streamlit_app_helpers.py  test_video_metadata.py
