[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricform-vision-lab"
version = "0.1.0"
description = "Explainable cricket batting computer-vision pipeline for pose quality, phase detection, movement features, and visual reporting."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  { name = "Shishir Ketha" }
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=16",
  "opencv-python>=4.9",
  "matplotlib>=3.8",
  "mediapipe==0.10.35",
  "streamlit>=1.40"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
